@@ -109,6 +109,7 @@ wxGTK:
 - wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized.
 - Added support for colour cursors (Pascal Monasse).
 - Setting foreground colour of single line wxTextCtrl now works
+- Added gtk.tlw.can-set-transparency system option
 
 wxMac:
 
